--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -80,8 +80,9 @@ a:visited {
 .sentence.handFont {
     font-size: 1.6rem;
     z-index: 3000;
-    top: 15%;
+    top: 12%;
     left: 20%;
+    padding: 10px 50px 10px 0;
     height: 50px;
     position: absolute;
 }
