--- a/src/styles/components/_mouse.scss
+++ b/src/styles/components/_mouse.scss
@@ -1,95 +1,49 @@
 .cursor {
-    width: 25px;
-    height: 25px;
-    border: 1px solid $color-3;
-    border-radius: 50%;
-    position: absolute;
-    transition-duration: 200ms;
-    transition-timing-function: ease-out;
-    animation: cursorAnim .5s infinite alternate;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    transition: .1s;
     pointer-events: none;
-    .cursorText {
-        width: 70px;
-        height: 70px;
-        border-radius: 50%;
+}
+
+.cursor--outline {
+    width: 20px;
+    height: 20px;
+    left: -8px;
+    top: -8px;
+    border-radius: 50%;
+}
+
+.inner-cursor {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 1px solid #ffff;
+    transition: all .2s ease-out;
+}
+
+//hovered border blue and scale
+.cursor--outline.hovered {
+    .inner-cursor {
+        width: 400%;
+        height: 400%;
+        transform: translate(-30px, -30px);
         border: 1px solid $color-1;
-        transition-duration: 200ms;
-        transition-timing-function: ease-out;
-        opacity: 0;
-    }
-    &::after {
-        content: "";
-        width: 20px;
-        height: 20px;
-        position: absolute;
-        border: 8px solid $color-5;
-        border-radius: 50%;
-        opacity: .5;
-        top: -8px;
-        left: -8px;
-        animation: cursorAnim2 .5s infinite alternate;
     }
 }
 
-.expand {
-    animation: cursorAnim3 .5s forwards;
-    border: 1px solid $color-2;
+//hovered White ans scale
+.cursor--outline.hoveredText {
+    .inner-cursor {
+        transform: scale(4);
+        background-color: #ffff;
+    }
 }
 
-.hovered,
-.hoveredText,
-.tipsCursor {
-    border: none;
-    &::after {
+//Text for action
+.cursor--outline.tipsCursor {
+    .inner-cursor {
         border: none;
-    }
-    .cursorText {
-        opacity: 1;
-        transform: translate(-30%, -30%);
-    }
-}
-
-.hovered,
-.hoveredText {
-    animation: none;
-}
-
-.tipsCursor .cursorText {
-    text-align: center;
-    border: none;
-}
-
-.hoveredText .cursorText {
-    background-color: white;
-}
-
-@keyframes cursorAnim {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(.7);
-    }
-}
-
-@keyframes cursorAnim2 {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(.4);
-    }
-}
-
-@keyframes cursorAnim3 {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(3);
-    }
-    100% {
-        transform: scale(1);
-        opacity: 0;
     }
 }
