--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -49,7 +49,7 @@ $black: black;
 
 html {
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
@@ -146,10 +146,13 @@ a:visited {
     }
     .container {
         margin-left: 0;
-        width: 100vw;
+        width: 96vw;
     }
-    .home {
-        padding: 2%;
+    .home,
+    .about,
+    .skills,
+    .contact {
+        padding: 2vw;
     }
     .sentence.handFont {
         position: relative;
@@ -165,6 +168,7 @@ a:visited {
     }
     .sentence.handFont {
         font-size: 1.2rem;
-        padding: 10px;
+        padding: 20px 0;
+        line-height: 1rem;
     }
 }
