--- a/src/styles/pages/_skills.scss
+++ b/src/styles/pages/_skills.scss
@@ -310,3 +310,53 @@
         transform: translateY(100%);
     }
 }
+
+@media screen and (max-width: 500px) {
+    .skills {
+        max-height: none;
+        max-width: 100vw;
+        //overflow-x: hidden;
+        height: 700px;
+        .container {
+            height: auto;
+            .tabs-container {
+                position: relative;
+                left: 0;
+                width: 100%;
+                .destrucBtn {
+                    width: 100%;
+                    span {
+                        letter-spacing: .2rem;
+                    }
+                }
+            }
+            .tabs-content {
+                article {
+                    flex-direction: column;
+                    padding: 0;
+                    .text {
+                        width: 100%;
+                        transform: translate(0, 50px);
+                    }
+                    section {
+                        transform: translate(0, -50px);
+                    }
+                }
+                article.active {
+                    .text {
+                        &::before {
+                            height: 0;
+                            width: 60%;
+                            right: 0;
+                            transform: translate(0, 0px);
+                        }
+                    }
+                    section {
+                        transform: translate(0, 0px);
+                        width: 80%;
+                    }
+                }
+            }
+        }
+    }
+}
