--- a/src/styles/pages/_skills.scss
+++ b/src/styles/pages/_skills.scss
@@ -29,6 +29,7 @@
                     p {
                         line-height: 2rem;
                         text-align: end;
+                        margin-right: 5rem;
                     }
                     &::before {
                         position: absolute;
@@ -172,26 +173,77 @@
                     grid-column: 1;
                     grid-row: 7;
                 }
+                &:nth-child(12) {
+                    grid-column: 3;
+                    grid-row: 6;
+                }
+                &:nth-child(13) {
+                    grid-column: 3;
+                    grid-row: 7;
+                }
             }
-            &:hover li {
-                &:nth-child(2) .light {
-                    animation: translateY 1s linear infinite;
+
+        }
+        .back-end {
+            li {
+                &:nth-child(1) {
+                    grid-column: 1;
+                    grid-row: 1;
                 }
-                &:nth-child(4) .light {
-                    animation: translateX 1s linear .5s infinite;
+                &:nth-child(2) {
+                    grid-column: 1;
+                    grid-row: 2;
+                    transition: all .3s;
                 }
-                &:nth-child(5) .light {
-                    animation: translateY 1s linear .5s infinite;
+                &:nth-child(3) {
+                    grid-column: 1;
+                    grid-row: 3;
                 }
-                &:nth-child(8) .light {
-                    animation: translateX 1s linear 1s infinite;
+                &:nth-child(4) {
+                    grid-column: 2;
+                    grid-row: 3;
+                    transition: all .3s .1s;
                 }
-                &:nth-child(10) .light {
-                    animation: translateY 1s linear 1.5s infinite;
+                &:nth-child(5) {
+                    grid-column: 3;
+                    grid-row: 3;
+                }
+                &:nth-child(6) {
+                    grid-column: 3;
+                    grid-row: 4;
+                }
+                &:nth-child(7) {
+                    grid-column: 3;
+                    grid-row: 5;
+                }
+                &:nth-child(8) {
+                    grid-column: 1;
+                    grid-row: 4;
+                    transition: all .3s .2s;
+                }
+                &:nth-child(9) {
+                    grid-column: 1;
+                    grid-row: 5;
+                }
+                &:nth-child(10) {
+                    grid-column: 1;
+                    grid-row: 6;
+                }
+                &:nth-child(11) {
+                    grid-column: 1;
+                    grid-row: 7;
+                }
+                &:nth-child(12) {
+                    grid-column: 2;
+                    grid-row: 7;
+                }
+                &:nth-child(13) {
+                    grid-column: 3;
+                    grid-row: 7;
                 }
             }
         }
-        .back-end {
+        .library{
             li {
                 &:nth-child(1) {
                     grid-column: 1;
@@ -209,7 +261,7 @@
                 &:nth-child(4) {
                     grid-column: 1;
                     grid-row: 5;
-                    transition: all .3s .1s;
+                    transition: all .3s;
                 }
                 &:nth-child(5) {
                     grid-column: 1;
@@ -225,50 +277,49 @@
                     grid-row: 6;
                 }
             }
-            &:hover li {
-                &:nth-child(2) .light {
-                    animation: translateY 1s linear infinite;
-                }
-                &:nth-child(4) .light {
-                    animation: translateY 1s linear .5s infinite;
-                }
-                &:nth-child(6) .light {
-                    animation: translateX1 1s linear 1s infinite;
-                }
-            }
         }
         .other {
             width: 20%;
             li {
                 &:nth-child(1) {
-                    grid-column: 2;
-                    grid-row: 2;
+                    grid-column: 3;
+                    grid-row: 1;
                 }
                 &:nth-child(2) {
-                    grid-column: 2;
-                    grid-row: 3;
+                    grid-column: 3;
+                    grid-row: 2;
                     transition: all .3s;
                 }
                 &:nth-child(3) {
-                    grid-column: 2;
-                    grid-row: 4;
+                    grid-column: 3;
+                    grid-row: 3;
                 }
                 &:nth-child(4) {
-                    grid-column: 2;
-                    grid-row: 5;
-                    transition: all .3s .2s;
+                    grid-column: 3;
+                    grid-row: 4;
+                    transition: all .3s;
                 }
                 &:nth-child(5) {
+                    grid-column: 3;
+                    grid-row: 7;
+                }
+                &:nth-child(6) {
                     grid-column: 2;
+                    grid-row: 7;
+                    transition: all .3s .2s;
+                }
+                &:nth-child(7) {
+                    grid-column: 1;
+                    grid-row: 7;
+                }
+                &:nth-child(8) {
+                    grid-column: 3;
                     grid-row: 6;
+                    transition: all .3s .2s;
                 }
-            }
-            &:hover li {
-                &:nth-child(2) .light {
-                    animation: translateY 1s linear infinite;
-                }
-                &:nth-child(4) .light {
-                    animation: translateY 1s linear .5s infinite;
+                &:nth-child(9) {
+                    grid-column: 3;
+                    grid-row: 5;
                 }
             }
         }
@@ -311,7 +362,20 @@
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1200px) {
+    .skills{
+        .container{
+            .tabs-container{
+                top: 85%;
+                ul{
+                    width: 70%;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 900px) {
     .skills {
         max-height: none;
         max-width: 100vw;
@@ -389,6 +453,15 @@
                             }
                             &:nth-child(11) {
                                 grid-column: 3;
+                                grid-row: 7;
+                            }
+                            &:nth-child(12) {
+                                grid-column: 1;
+                                grid-row: 6;
+                                transition: all .3s .4s;
+                            }
+                            &:nth-child(13) {
+                                grid-column: 1;
                                 grid-row: 7;
                             }
                         }
